<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="version_number">版本:1.0.1.20</string>
    <string name="string_login">登录</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="string_forget">忘记密码？</string>
    <string name="string_register">注册</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="identify_code">免费获取验证码</string>
    <string name="link_text_auto">呼吸机使用协议</string>
    <string name="string_telphone">你的手机号：</string>
    <string name="default_phone">默认手机号</string>
    <string name="code_hint">输入验证码</string>
    <string name="string_code">获取验证码</string>
    <string name="string_next">下一步</string>
    <string name="password_hint_hint">密码（6-20位字符）</string>
    <string name="second_password_hint">确认密码（6-20位字符）</string>
    <string name="string_finish">确认</string>
    <string name="string_personal_msg">个人信息</string>
    <string name="user_name">姓名：</string>
    <string name="user_age">年龄：</string>
    <string name="set_user_age">请输入年龄：</string>
    <string name="set_user_name">请输入姓名：</string>
    <string name="set_user_machineID">请输入机器序列号：</string>
    <string name="user_machineID">机器序列号：</string>
    <string name="user_sex">性别：</string>
    <string name="male">男                       </string>
    <string name="female">       女</string>
    <string name="user_phoneNumber">电话号码：</string>
    <string name="set_user_phoneNumber">请输入电话号码：</string>
    <string name="user_address">家庭住址：</string>
    <string name="set_user_address">请输入家庭住址：</string>
    <string name="user_height">身高：</string>
    <string name="set_user_height">请输入身高：</string>
    <string name="user_weight">体重：</string>
    <string name="set_user_weight">请输入体重：</string>
    <string name="string_machine_msg">工作参数</string>
    <string name="auto_switch_machine">自动开关机</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="equipment_mode">设备模式</string>
    <string name="automatic">AUTO</string>
    <string name="manual">MANU</string>
    <string name="min_press">Min press</string>
    <string name="max_press">Max press</string>
    <string name="set_machine_min_press">请输入压力最小值：</string>
    <string name="set_machine_max_press">请输入压力最大值：</string>
    <string name="pressure_unloading">压力卸载</string>
    <string name="first">1档</string>
    <string name="second">2档</string>
    <string name="third">3档</string>
    <string name="string_simple_report">简单报告</string>
    <string name="case_name">病例姓名：</string>
    <string name="user_BMI">BMI：</string>
    <string name="use_date">使用日期：</string>
    <string name="use_times">使用次数：</string>
    <string name="totalTime">总时间：</string>
    <string name="apnea_index">呼吸暂停指数：</string>
    <string name="low_ventilation_index">低通气指数：</string>
    <string name="AHI">AHI：</string>
    <string name="snoring_index">鼾声指数：</string>
    <string name="limited_airflow_index">气流受限指数：</string>
    <string name="percent_95_press">压力的95%值：</string>
    <string name="percent_90_press">压力的90%值：</string>
    <string name="average_press">压力的平均值：</string>
    <string name="max_air_leakage">漏气量的最大值：</string>
    <string name="percent_95_air_leakage">漏气量的95%值：</string>
    <string name="percent_90_air_leakage">漏气量的90%值：</string>
    <string name="average_air_leakage">漏气量的平均值：</string>
    <string name="string_resplus">ResPlus</string>
    <string name="insert_personal_msg">完善个人信息</string>
    <string name="insert_work_msg">设置工作参数</string>
    <string name="check_simple_report">查看简单报告</string>
    <string name="date_choice">日期选择</string>
    <string name="time_choice">时间选择</string>
    <string name="set_choice_time">请选择时间：</string>
    <string name="set_choice_date">请选择日期：</string>
    <string name="choice_cancel">取消</string>


    <string name="app_name">车随我</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">用户名：</string>
    <string name="password">密    码：</string>
    <string name="rememberpwd">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="register">注册</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="errormsg">用户名或密码错误</string>
    <string name="login">登录</string>
    <string name="title_activity_modify_pwd">修改密码</string>
    <string name="modifypwd">修改密码</string>
    <string name="getvcode">获取验证码</string>
    <string name="vcode">验证码：</string>
    <string name="newpwd">新密码：</string>
    <string name="ensurepwd">确认密码：</string>
    <string name="alterpwd">更改密码</string>
    <string name="asterisk">*</string>
    <string name="idcard">身份证：</string>
    <string name="drivelicense">驾驶证号：</string>
    <string name="takeplace">取车地点：</string>
    <string name="taketime">取车时间：</string>
    <string name="returnplace">还车地点：</string>
    <string name="returntime">还车时间：</string>
    <string name="choosecar">选择车型：</string>
    <string name="submit">提交</string>
    <string name="phonebooking">电话预定</string>
    <string name="rentprice">租车价格：</string>
    <string name="insureprice">保险价格：</string>
    <string name="delivercar">送车上门：</string>
    <string name="buyinsure">购买保险</string>
    <string name="total">共计</string>
    <string name="yuan">元</string>

    <string name="cardetail1">北京现代ix25,橘黄色的车漆、包裹前大灯的LED光带、分层设计的进气格栅,底部护板类似小猛兽的獠牙。</string>


    <string name="rentcar">租车</string>
    <string name="orderhistory">订单历史</string>
    <string name="setup">设置</string>

    <string name="fetchway">取车方式</string>
    <array name="takeplace">
        <item>上门取车</item>
        <item>送到指定地点</item>
    </array>
    <string name="returnway">还车方式</string>
    <array name="returnplace">
        <item>上门取车</item>
        <item>送到指定地点</item>
    </array>
    <string name="sendaddress">设置</string>
    <array name="takeaddress">
        <item></item>
        <item>长沙火车站</item>
        <item>长沙火车南站</item>
        <item>长沙机场</item>
        <item>长沙市天心区韶山路88号</item>
    </array>
    <string name="rentCar_price">租车价格</string>
    <string name="insurance_price">保险价格</string>
    <string name="sendCar">租车价格</string>

    <string name="orderexcepted">订单已接受</string>
    <string name="remind">若您现在支付订金，则车随我网将确保您选择的车辆届时为您服务。
为保证您的行程不发生意外，车随我网建议您预付订金，享受更高质量的服务。</string>
    <string name="phoneinquiry">电话询问</string>
    <string name="downpayment">支付定金</string>
    <string name="main_home">首页</string>


    <string name="phonereturn">电话还车</string>
    <string name="nextButton">下一步</string>
    <string name="returnremind">车随我正在安排师傅到指定地点接车，20分钟内会安排妥当。      您也随时可以致电我们的客服。</string>
    <string name="returnaccepteremind">现在支付，则还车流程将更简单，为您节省时间。    若您不支付，相关费用将在之后您的信用卡押金中扣除。</string>
    <string name="returnensuredremind1">将前往目的地接车，你需要准备</string>
    <string name="returnensuredremind2">点击下方的“已付款”按钮。    您也可以随时致电我们的客服。</string>
    <string name="rechargeremind">车随我网正在进行“充500送500”的优惠活动，点击“充值”马上参与活动。</string>
</resources>
