<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="rentcar.example.administrator.userapp.MainActivity">





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/t_taketime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taketime"
                android:textColor="@android:color/black"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/t_taketime"
                android:layout_toRightOf="@id/t_taketime"
                android:cursorVisible="false"
                android:editable="false"
                android:hint="请选择取车时间"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_choice"
                android:textColor="@color/orange"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/set_choice_date"
                android:textColor="@color/gray"
                android:textSize="18sp" />
        </LinearLayout>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"></DatePicker>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_choice"
                android:textColor="@color/orange"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/set_choice_time"
                android:textColor="@color/gray"
                android:textSize="18sp" />
        </LinearLayout>

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"></TimePicker>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/renttimeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="租车时间："
            android:textColor="@android:color/black"
            android:textSize="24dp" />
        <EditText
            android:id="@+id/rentdays"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:hint="选择租车时间"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="2"
            android:layout_toEndOf="@id/renttimeTv"
            android:layout_toRightOf="@id/renttimeTv"
            />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/t_choosecar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choosecar"
                android:textColor="@android:color/black"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/choosecar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/t_choosecar"
                android:layout_toRightOf="@id/t_choosecar"
                android:hint="随机车型" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/t_takeplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/takeplace"
                android:textColor="@android:color/black"
                android:textSize="24dp" />

            <Spinner
                android:id="@+id/takeplace"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_toEndOf="@id/t_takeplace"
                android:layout_toRightOf="@id/t_takeplace"
                android:clickable="true"
                android:contextClickable="true"
                android:entries="@array/takeplace"
                android:prompt="@string/fetchway"></Spinner>

        </RelativeLayout>
        <Spinner
            android:id="@+id/takeaddress"
            android:layout_width="211dp"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:entries="@array/takeaddress"
            android:prompt="@string/sendaddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rentCar_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rentCar_price"
                android:textColor="@android:color/black"
                android:textSize="24dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/rent_prices_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="24dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/insure_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insureprice"
                android:textColor="@android:color/black"
                android:textSize="24dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/insure_price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="24dp"
                 android:layout_marginLeft="20dp"
                android:visibility="gone"/>
            <CheckBox
                android:id="@+id/insure_price_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:checked="true"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/buyInsure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:text="购买保险"
                android:visibility="gone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scsm_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivercar"
                android:textColor="@android:color/black"
                android:textSize="24dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/scsm_price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="24dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/sum_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@android:color/black"
                android:textSize="24dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/sum_price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="24dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone" />

        </LinearLayout>
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/orenge"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="24dp" />

        <Button
            android:id="@+id/phonebooking"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/phonegreen"
            android:text="@string/phonebooking"
            android:textColor="@android:color/white"
            android:textSize="36dp" />

    </LinearLayout>
</ScrollView>