<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
    tools:context="rentcar.example.administrator.userapp.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/orange">

        <TextView
            android:id="@+id/login"
            style="@style/title_bar_text"
            android:text="@string/string_login"
             />


    </LinearLayout>
    <!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register"
        android:textSize="30dp"
        android:gravity="center"
        android:background="@android:color/holo_orange_light" />
-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:textSize="24dp"
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/asterisk"/>

        <TextView
            android:id="@+id/user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="24dp"
            android:textColor="@android:color/black"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/asterisk"
            android:layout_toEndOf="@id/asterisk"
            android:layout_marginLeft="5dp"
            />

        <EditText
            android:id="@+id/u_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="手机号码"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="23dp"
            android:layout_toRightOf="@id/user_phone"
            android:layout_toEndOf="@id/user_phone" />

    </RelativeLayout>

    <Button
        android:id="@+id/getvcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getvcode"
        android:textSize="24dp"
        android:textColor="@android:color/holo_blue_bright"
        android:layout_gravity="right"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vcode"
            android:textColor="@android:color/black"
            android:textSize="24dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/vcode"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:textSize="24dp"
            android:textColor="@android:color/holo_red_light"
            android:id="@id/asterisk"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="24dp"
            android:textColor="@android:color/black"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/asterisk"
            android:layout_toEndOf="@id/asterisk"
            android:layout_marginLeft="5dp"
            />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:textSize="24dp"
            android:textColor="@android:color/holo_red_light"
            android:id="@id/asterisk"/>

        <TextView
            android:id="@+id/t_ensurepwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ensurepwd"
            android:textColor="@android:color/black"
            android:textSize="24dp"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/asterisk"
            android:layout_toEndOf="@id/asterisk" />

        <EditText
            android:id="@+id/ensuer_pwd"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_toEndOf="@id/t_ensurepwd"
            android:layout_toRightOf="@id/t_ensurepwd" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asterisk"
            android:textSize="24dp"
            android:textColor="@android:color/holo_red_light"
            android:id="@id/asterisk"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idcard"
            android:textSize="24dp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/asterisk"
            android:layout_toEndOf="@id/asterisk"
            android:id="@+id/t_idcard"/>

        <EditText
            android:id="@+id/idcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_toEndOf="@id/t_idcard"
            android:layout_toRightOf="@id/t_idcard" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drivelicense"
            android:textSize="24dp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="16dp"
            android:id="@+id/t_drivelicense"/>

        <EditText
            android:id="@+id/drivelicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/t_drivelicense"
            android:layout_toRightOf="@id/t_drivelicense"/>

    </RelativeLayout>

    <Button
        android:id="@+id/register_finish"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textSize="24dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_orange_dark"
        />

</LinearLayout>
