<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/orange">

            <TextView
                android:id="@+id/login"
                style="@style/title_bar_text"
                android:text="@string/string_login" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:gravity="center"
            android:layout_marginTop="30dp">
            <ImageView
                android:id="@+id/login_phoneImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/login_phone"
                android:layout_alignTop="@+id/login_phone"
                android:src="@drawable/icon_username"
                />
            <EditText
                android:id="@+id/login_phone"
                style="@style/edittext_style"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:gravity="center"
                android:ems="10"
                android:textSize="15sp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:inputType="number"/>
            <requestFocus/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/login_passwordImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/login_password"
                android:layout_alignTop="@+id/login_password"
                android:src="@drawable/icon_user_password"
                />
            <EditText
                android:id="@+id/login_password"
                style="@style/edittext_style"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:gravity="center"
                android:ems="10"
                android:maxLength="11"
                android:textSize="15sp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:inputType="textPassword"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">
            <RadioButton
                android:id="@+id/remember_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/remember_password"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginRight="20dp"/>
            <RadioButton
                android:id="@+id/auto_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auto_login"
                android:textSize="16sp"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/orange"
                android:text="@string/string_login"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"/>
            <Button
                android:id="@+id/regist_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/orange"
                android:text="@string/string_register"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginRight="15dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/login_forget_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/string_forget"
            android:textSize="15dp"
            android:textColor="@color/orange"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:onClick="forgetPwd"
            android:focusable="true"
            android:clickable="true"
            />

    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/bcg_cityshadow"
        android:scaleType="centerCrop"/>
</RelativeLayout>
